# 2023-2-RayTracing

./: .gitignore  CMakeLists.txt  Camara.cpp  Camara.h  Luz.h  Objeto.cpp  Objeto.h  main.cpp
